tests/cases/control-flow/ok/while-known-false-owner-state.ari
fn main() -> i64 {
  let condition = false;
  let token: own i64 = 5;
  while condition {
    drop token;
  }
  drop token;
  return 0;
}
