tests/cases/control-flow/errors/loop-break-owner-state.ari
fn main() -> i64 {
  let condition = true;
  let token: own i64 = 5;
  while condition {
    drop token;
    break;
  }
  drop token;
  return 0;
}
